--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,10 @@ select:focus {
 }
 body {
     background-color: #000073 !important;
+    /* background-color: #c123ff !important; */
 }
 .section-head {
-    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Barlow Semi Condensed Semi-Bold', sans-serif;
     font-size: 48px;
     color: #fff;
 }
@@ -41,9 +42,10 @@ h1, h2, h3, h4, h5, h6 {
 /* Font Barlow Semi Condensed */
 @font-face {
     src: url(../font/Barlow-Semi-Condensed/BarlowSemiCondensed-SemiBold.ttf);
-    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-family: 'Barlow Semi Condensed Semi-Bold', sans-serif;
     font-weight: 600;
 }
+
 
 /* Font Montserrat */
 @font-face {
@@ -103,18 +105,21 @@ h1, h2, h3, h4, h5, h6 {
 .form-msg {
     margin-top: 20px;
 }
-
-.Bdate,
 .Byear {
-    width: 130px;
-    height: 40px;
+    width: 98px;
+    height: 37px;
     padding: 0px 15px;
     border-radius: 50px;
 }
-
+.Bdate{
+    width: 102px;
+    height: 37px;
+    padding: 0px 15px;
+    border-radius: 50px;
+}
 .Bmonth {
-    width: 300px;
-    height: 40px;
+    width: 255px;
+    height: 36px;
     padding: 0px 15px;
     border-radius: 50px;
 }
@@ -141,19 +146,30 @@ ul.form-button li {
     display: inline-block;
 }
 
+input[type=checkbox] {
+    width: 25px;
+    height: 25px;
+    background: red;
+}
+.formFiled-btn {
+    margin-top: 45px;
+    margin-left: 59px;
+}
 li a.form-btn {
     display: block;
     width: 180px;
-    height: 40px;
+    height: 44px;
     line-height: 40px;
     text-align: center;
     border-radius: 50px;
-    border: 1px solid #fff;
+    border: 3px solid #fff;
     text-decoration: none;
     color: #111;
     margin: 0px 10px;
+    font-size: 18px;
+    font-family: 'Montserrat SemiBold', sans-serif;
+    font-weight: 700;
 }
-
 .fb-submit {
     background: #60D3A3;
 }
@@ -162,6 +178,46 @@ li a.form-btn {
     background: #BCC2C2;
 }
 
+.field-box {
+    margin-left: -26px;
+}
+
+.fb-right,
+.fb-error {
+    position: relative;
+}
+
+.fb-error::after {
+    position: absolute;
+    content: '\f06a';
+    font-family: 'Font Awesome 5 Pro';
+    top: 0;
+    right: 0;
+    font-size: 22px;
+    color: #FF0000;
+}
+
+.fb-right::after {
+    position: absolute;
+    content: '\f058';
+    font-family: 'Font Awesome 5 Free';
+    top: 0;
+    right: 0;
+    font-size: 22px;
+    color:#00FF00;
+}
+.field-title {
+    font-family: 'Montserrat SemiBold', sans-serif;
+    font-size: 19px;
+    color: var(--font-color);
+    padding: 5px;
+    margin-left: 146px;
+}
+
+
+.checkBox ul li {
+    display: inline-block;
+}
 /* Slider Section Start */
 .slick-arrow {
     font-size: 32px;
