--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -90,5 +90,121 @@
     .form-msg-checkbox {
         margin-top: 18px;
     }
+    .field-box-label-checkbox label {
+        display: none;
+    }
     
+}
+
+/* Tablet Responsive Tab view : 768px */
+@media screen and (max-width: 768px) {
+    /* Theme Core styles Responsive */
+    .section-head {
+        font-size: 48px;
+    }
+
+    /* Form Section Start */
+    .field-title {
+        margin-left: -20px;
+    }
+    .form-field {
+        width: 377px;
+        height: 38px;
+        padding: 10px 15px;
+        border-radius: 50px;
+        border: 0;
+        margin-left: 15px;
+    }
+    .fb-error::after {
+        position: absolute;
+        content: '\f06a';
+        font-family: 'Font Awesome 5 Pro';
+        top: 5px;
+        right: -57px;
+        font-size: 20px;
+    }
+    .form-msg p {
+        margin-left: 16px;
+        margin-top: 5px;
+    }
+    .formFilled-option-one {
+        margin-top: 45px;
+    }
+    .form-option {
+        width: 378px;
+        height: 38px;
+        padding: 10px 15px;
+        border-radius: 50px;
+        border: 0;
+        margin-left: 14px;
+    }
+    .fb-right::after {
+        position: absolute;
+        content: '\f058';
+        font-family: 'Font Awesome 5 Free';
+        top: 3px;
+        right: -58px;
+        font-size: 22px;
+        color: #00FF00;
+    }
+    .formFiled-birth {
+        margin-top: 45px;
+    }
+    .Byear {
+        width: 78px;
+        height: 37px;
+        padding: 0px 15px;
+        border-radius: 50px;
+        margin-left: 54px;
+    }
+    .Bmonth {
+        width: 192px;
+        height: 36px;
+        padding: 0px 15px;
+        border-radius: 50px;
+        margin-left: 32px;
+    }
+    .Bdate {
+        width: 77px;
+        height: 37px;
+        padding: 0px 15px;
+        border-radius: 50px;
+        margin-left: 14px;
+    }
+    .formFiled-Checkbox {
+        margin-top: 46px;
+    }
+    .frm-checkbox {
+        margin-left: 15px;
+    }
+    .checkBox label {
+        font-size: 17px;
+        color: #fff;
+        text-transform: capitalize;
+        margin-left: 25px;
+    }
+    .form-msg-checkbox p {
+        margin-left: 16px;
+        margin-top: 2px;
+    }
+    .frm-checkbox {
+        margin-left: 15px;
+    }
+    li a.form-btn {
+        display: block;
+        width: 182px;
+        height: 44px;
+        line-height: 40px;
+        text-align: center;
+        border-radius: 50px;
+        border: 3px solid #fff;
+        text-decoration: none;
+        color: #111;
+        font-size: 16px;
+        font-family: 'Montserrat SemiBold', sans-serif;
+        font-weight: 400;
+        margin-left: -13px;
+        margin-top: -8px;
+        margin-right: 23px;
+    }
 }
